# Context-Compression-Engine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cce/: cli.py  dependencies.py  main.py  settings.py
cce/api/: errors.py  routes.py  schemas.py
cce/compression/: compressor.py  queue.py
cce/embeddings/: base.py  lm_studio.py  sentence_transformer.py
cce/identity/: resolver.py
cce/memory/: base.py  ltm.py  manager.py  stm.py  wm.py
cce/models/: types.py
cce/pipeline/: assembler.py  chunker.py  router.py  scorer.py
cce/storage/: db.py  faiss_store.py  schema.sql
docs/: IMPLEMENTATION_PLAN.md  PRODUCT_SCOPE.md
scripts/: bench_latency.py  run_dev.sh
tests/: conftest.py
tests/integration/: test_health.py  test_pipeline.py
tests/unit/: test_assembler.py  test_chunker.py  test_cli.py  test_compressor.py  test_identity.py  test_manager.py  test_memory.py  test_router.py  test_scorer.py  test_types.py
