[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-compression-engine"
version = "0.1.0"
description = "Local sidecar service for LLM context compression and memory management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cce*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
